--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
  <!DOCTYPE html>
- <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>ITMD-362</title>
-</head>
-<body>
-  <h3>Hello</h3>
-  <p> Hello world. This is my first website!<br>
-  </p>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>ITMD-362 Human-Computer Interaction and Web Design</title>
+	</head>
+	<body>
+		<h1>ITMD-362 Human-Computer Interaction and Web Design</h1>
+			<h3>Lab 1 for ITMD 362 - Fall 2021</h3>
+			<p>Welcome to my website.</br>
+				Joseph Kim</br>
+			</p>
+	</body>
 </html>
