--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 		<h1>ITMD-362 Human-Computer Interaction and Web Design</h1>
 			<h3>Lab 1 for ITMD 362 - Fall 2021</h3>
 			<p>Welcome to my website.</br>
-				Joseph Kim</br>
+				Here are some information about me</br>
 			</p>
+			<ul>
+				<li>My name is Joseph Kim.</li>
+				<li>I am a second year at IIT</li>
+			</ul>
 	</body>
 </html>
